--- a/style/style.css
+++ b/style/style.css
@@ -4,30 +4,24 @@
     flex-wrap: wrap;
 }
 
-.card{
-    width: 30%;
-    min-width: 300px;
-}
-
 .sensor-large{
     background-color: limegreen;
     font-family: Tahoma, 'Times New Roman', Times, serif;
     font-size: large;
     width: 200px;
     border-radius: 5px;
-    
 }
 
 .sensor-value{
     text-align: center;
     font-size: larger;
     font-weight: bold;
-    padding-right: 0 !important;
+    /*padding-right: 0 !important;*/
 }
 
 .row-alarms{
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+    /*margin-left: 0 !important;*/
+    /*margin-right: 0 !important;*/
 }
 
 .units{
@@ -36,7 +30,7 @@
 
 .alarm1-value, .alarm2-value{
     font-size: medium;
-    padding-left: 0 !important;
+    /*padding-left: 0 !important;*/
 
 }
 
@@ -105,4 +99,15 @@
 .nothealthysensor{
      background-color: gray; 
      border-radius: inherit;
+}
+
+.centered-sensors{
+  text-align: -webkit-center; 
+}
+
+.card-deck .card:not(:last-child){
+    margin-right: 0px !important;
+}
+.card-deck .card:not(:last-child){
+    margin-left: 0px !important;    
 }
