--- a/style/style.css
+++ b/style/style.css
@@ -13,9 +13,10 @@
 }
 
 .sensor-value{
-    text-align: center;
+    text-align: -webkit-right;
     font-size: larger;
     font-weight: bold;
+    /* text-align: -webkit-center; */
     /*padding-right: 0 !important;*/
 }
 
@@ -26,6 +27,7 @@
 
 .units{
     font-size: medium;
+    text-align: left;
 }
 
 .alarm1-value, .alarm2-value{
@@ -41,6 +43,8 @@
 .sensor-type{
     margin: 0 5px 0 5px;
     font-size: smaller;
+    text-align: -webkit-left;
+    
 }
 
 .sensor-description{
@@ -110,4 +114,26 @@
 }
 .card-deck .card:not(:last-child){
     margin-left: 0px !important;    
+}
+
+/*footer*/
+.footer{
+    /*position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;*/
+    background-color: #f5f5f5;
+}
+
+body { 
+    padding-top: 70px; 
+    padding-bottom: 70px; 
+    }
+
+.anchor{
+   display:block;
+   height:70px; /* this is the height of your header */
+   margin-top:-70px; /* this is again negative value of the height of your header */
+   visibility:hidden;
 }
