--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,8 @@
 .units{
     font-size: medium;
     text-align: left;
+    font-weight: bold;
+    padding-top: 5px;
 }
 
 .alarm1-value, .alarm2-value{
@@ -121,8 +123,8 @@
     /*position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
     line-height: 60px;*/
+    height: 70px;
     background-color: #f5f5f5;
 }
 
@@ -136,4 +138,24 @@ body {
    height:70px; /* this is the height of your header */
    margin-top:-70px; /* this is again negative value of the height of your header */
    visibility:hidden;
+}
+
+
+.warning-item{
+    margin-right: 10px;
+    display: inline-block;
+    background-color: red;
+    border-radius: 5px;
+}
+
+.warning-list {
+    border: 1px solid black;
+    overflow: scroll;
+    height: 70px;
+    
+}
+
+.warning-item > a{
+    text-decoration: none;
+    color: black;
 }
