--- a/style/style.css
+++ b/style/style.css
@@ -123,20 +123,20 @@
     /*position: absolute;
     bottom: 0;
     width: 100%;
-    line-height: 60px;*/
-    height: 70px;
+    line-height: 55px;*/
+    height: 55px;
     background-color: #f5f5f5;
 }
 
-body { 
-    padding-top: 70px; 
-    padding-bottom: 70px; 
+body {
+    padding-top: 55px;
+    padding-bottom: 55px;
     }
 
 .anchor{
    display:block;
-   height:70px; /* this is the height of your header */
-   margin-top:-70px; /* this is again negative value of the height of your header */
+   height:55px; /* this is the height of your header */
+   margin-top:-55px; /* this is again negative value of the height of your header */
    visibility:hidden;
 }
 
@@ -151,11 +151,60 @@ body {
 .warning-list {
     border: 1px solid black;
     overflow: scroll;
-    height: 70px;
+    height: 55px;
     
 }
 
 .warning-item > a{
     text-decoration: none;
     color: black;
+}
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  right: 0px;
+  top: 55px;
+  z-index: 1 !important;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: #373a47;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
 }
